# SGM_SPS

./: README.md
SlantedPlaneSmoothing/: Boundary.hpp  CMakeLists.txt  Definitions.hpp  KITTI_README.txt  README.txt  Segment.hpp  SlantedPlane  SlantedPlane.cpp  evaluate_stereo.cpp  io_disp.h  runSlanted.sh  runTests.sh
sgmflow/: CMakeLists.txt  SGMflow.cpp  SGMflow.h  sgmflow_main.cpp
sgmflow/devkit/cpp/: evaluate_flow.cpp
sgmflow/devkit/matlab/: demo.m
